--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "server": "nodemon index.js",
+    "client": "npm start --prefix frontend",
+    "both": "concurrently \"npm run server\" \"npm run client\""
   },
   "keywords": [],
   "author": "Hema Khati",
@@ -14,12 +17,16 @@
   "dependencies": {
     "bcryptjs": "^3.0.2",
     "cohere-ai": "^7.18.0",
+    "concurrently": "^9.2.0",
+    "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "express-validator": "^7.2.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.17.0",
     "nodemon": "^3.1.10",
-    "openai": "^5.8.2"
+    "openai": "^5.8.2",
+    "react-router-dom": "^7.8.0"
   }
 }
