--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "mongoose": "^8.17.0",
     "nodemon": "^3.1.10",
     "openai": "^5.8.2",
-    "react-router-dom": "^7.8.0"
+    "react-infinite-scroll-component": "^6.1.0",
+    "react-router-dom": "^7.8.0",
+    "swiper": "^11.2.10"
   }
 }
