--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.17.0",
     "multer": "^2.0.2",
+    "nodemailer": "^7.0.5",
     "nodemon": "^3.1.10",
     "openai": "^5.8.2",
     "react-infinite-scroll-component": "^6.1.0",
